<resources>
    <string name="app_name">Capture Farm</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_logo">Company Logo</string>
    <string name="title_activity_login">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_profile">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="farmer_first_name">First Name</string>
    <string name="farmer_last_name">Last Name</string>
    <string name="farmer_address">Farmer\'\s Address</string>
    <string name="farmer_phone_number">Phone Number</string>
    <string name="farmer_email">Email</string>
    <string name="photograph">Take Picture</string>
    <string name="display_picture">Display Picture</string>
    <string name="submit">Submit</string>
    <string name="farm_location">Farm Location</string>
    <string name="farm_name">Farm Name</string>
    <string name="farm_coordinates">Farm Coordinates</string>
    <string name="autocomplete">Enter Address, City or Zip Code</string>
    <string name="option_get_place">Get Place</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
